# typeless

./: .gitignore  README
include/: Any.h  AnyStorage.h  ICloneable.h  Referenced.h  any-operators.h
test/: CMakeLists.txt  any-test.cpp  anyoperators-test.cpp  anystorage-test.cpp
